changed the new text

--- a/shop.html
+++ b/shop.html
@@ -111,7 +111,7 @@
           <a href="">
             <div class="new">
               <h5>
-                New
+                Newone
               </h5>
             </div>
             <div class="img-box">
@@ -172,133 +172,133 @@
             </div>
           </a>
         </div>
-      <!-- coustomised  -->
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
+        <!-- coustomised  -->
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+        <div class="box">
+          <a href="">
+            <div class="img-box">
+              <img src="images/slider-img.png" alt="">
+            </div>
+            <div class="detail-box">
+              <h6 class="price">
+                $100
+              </h6>
+              <h6>
+                Chair
+              </h6>
+            </div>
+          </a>
+        </div>
+
+        <!-- the html -->
+        <a href="" class="brand-btn">
+          See More
         </a>
       </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      <div class="box">
-        <a href="">
-          <div class="img-box">
-            <img src="images/slider-img.png" alt="">
-          </div>
-          <div class="detail-box">
-            <h6 class="price">
-              $100
-            </h6>
-            <h6>
-              Chair
-            </h6>
-          </div>
-        </a>
-      </div>
-      
-      <!-- the html -->
-      <a href="" class="brand-btn">
-        See More
-      </a>
-    </div>
   </section>
 
   <!-- end brand section -->
@@ -317,7 +317,7 @@
         <div class="col-md-3">
           <div class="info_contact">
             <h5>
-                    About 
+              About
             </h5>
             <div>
               <div class="img-box">
@@ -325,7 +325,7 @@
               </div>
               <p>
                 #63, 11th Cross, Banjara Layout,
-                   Horamavu,
+                Horamavu,
                 Bangalore, Karnataka 560043
               </p>
             </div>
@@ -334,8 +334,8 @@
                 <img src="images/telephone-white.png" width="12px" alt="">
               </div>
               <p>
-               +91 9241117111
-               +91 9845221247
+                +91 9241117111
+                +91 9845221247
               </p>
             </div>
             <div>
@@ -355,7 +355,7 @@
               Informations
             </h5>
             <p>
-             We will make the best Designs for your home
+             We will make the best designs in the world
             </p>
           </div>
         </div>
@@ -363,7 +363,7 @@
         <div class="col-md-3">
           <div class="info_insta">
             <h5>
-             Instagram
+              Instagram
             </h5>
             <div class="insta_container">
               <div>
